proxy-deploy.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "48"
  labels:
    team: "sre"
  name: reliability-proxy
  namespace: reliability-pp
spec:
  progressDeadlineSeconds: 150
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      service: proxy
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 35%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        service: proxy
    spec:
      containers:
      - env:
        - name: foo
          value: bar
        image: traefik:v1.6.5-alpine
        name: proxy
        # args:
        # - --metrics.datadog.address="${MINION_NAME}:8125" # requieres to work: https://github.com/containous/traefik-library-image/pull/30
        imagePullPolicy: IfNotPresent
        ports:
        - protocol: TCP
          containerPort: 8080 # reverese-proxy / load-balance ingress service
          name: http
        - protocol: TCP
          containerPort: 8081 # traefik-ui dashboard
          name: traefik
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /ping
            port: traefik
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1  
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /ping
            port: traefik
          initialDelaySeconds: 5
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        resources:
          limits:
            cpu: 200m
            memory: 100Mi
          requests:
            cpu: 100m
            memory: 50Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - name: traefik-toml
          mountPath: /etc/traefik
      volumes:
      - name: traefik-toml
        configMap:
          name: traefik-toml-1
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
