proxy-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: proxy
  namespace: reliability-pp
  labels:
    name: proxy
    team: "sre"
spec:
  type: ClusterIP
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    service: proxy
  sessionAffinity: None
